initial React integration.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -5,11 +5,7 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
-    <section id="index"></section>
+    <div id="root"></div>
+    <script src="../target/www/renderer.js"></script>
   </body>
 </html>
