using default webpack output directory (for now).

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../target/www/renderer.js"></script>
+    <script src="../dist/main.js"></script>
   </body>
 </html>
