--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Reactron (Electron + React + webpack)</title>
+    <!-- TODO: webpack/import CSS from JS is quite problematic. -->
+    <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css"/>
+    <script src=''></script>
   </head>
   <body>
     <div id="root"></div>
