renamed renderer bundle.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../dist/main.js"></script>
+    <!-- reference webpack build artefact. -->
+    <script src="../dist/renderer.js"></script>
   </body>
 </html>
